<resources>
    <string name="app_name">The Real Cupid</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="name">Enter your name</string>
    <string name="lastname">Enter your last name</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="email">Enter your email</string>
    <string name="code">Enter your university code</string>
    <string name="university">Enter your University</string>
    <string name="carrer">Enter your carrer</string>
    <string name="clean">Clean</string>
    <string name="error_empty_variable">The value %s is required</string>
    <string name="gender">Which is your gender?</string>
    <string name="confirmpass">Confirm password</string>
    <string name="invalid">Please enter a valid %s address</string>
    <string name="wrongPassword">Please confirm your %s</string>
    <string name="menu">MENU</string>
    <string name="contacts">Contacts</string>
    <string name="barlogin">Log in</string>
    <string name="barregister">Register</string>
    <string name="error_empty">values required</string>
    <string name="error_incorrectValues">incorrect Values</string>
    <string name="age">Age</string>
    <string name="people_interest">Gender</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="remember">Remember me</string>
    <string name="temporal_message_contacts">"Soon you will be able to see the profile of: "</string>
    <string name="profile">Profile</string>
    <string name="usernameProfile">Username</string>
    <string name="Age1">Age</string>
    <string name="career1">Carrer</string>
    <string name="chat">Chat</string>
    <string name="message">Write a message</string>
    <string name="send">Send</string>


    <string name="contact_us1">You have problems? Contact Us!</string>
    <string name="takePicture">Take a picture</string>
    <string name="user">Username</string>
    <string name="addContactFromRandom">has been added in your contacts.</string>
    <string name="rejectContactFromRandom">This user is already in your contacts.</string>
    <string name="userMessage">Username</string>
</resources>
