<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:background="#e3ecfd"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_form_backbuttonsbottonazul"
        android:orientation="horizontal">
         <ImageView
             android:id="@+id/photoProfile"
             android:layout_width="70dp"
             android:layout_height="70dp"
             app:srcCompat="@drawable/chatgroup">
         </ImageView>

         <TextView
             android:id="@+id/nameChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:text="Chat"
             android:textColor="@color/white"
             android:textSize="30dp"
             android:layout_gravity="center">
          </TextView>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMensajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5"
                android:hint="@string/userMessage"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:layout_weight="1">
            </EditText>
            <EditText
                android:id="@+id/txtMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5"
                android:hint="@string/message"
                android:textSize="20dp"
                android:layout_weight="1">
            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/send">
        </Button>
    </LinearLayout>
</LinearLayout>