<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f6ff">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageProfileRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/profile1" />

        <TextView
            android:id="@+id/textUser"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/fondo_botton9"
            android:text="@string/usernameProfile"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Age1"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/textCareer"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="@string/career1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="@drawable/fondo_botton9"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="20dp" />
        <Button
            android:id="@+id/botonHello"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton3"
            android:text="Hello Mami"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="22sp" />

        <Button
            android:id="@+id/ThankUNext"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton_done"
            android:text="Thank U Next"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="22sp" />
    </LinearLayout>
</RelativeLayout>