<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="##f2f6ff">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_inte"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="515dp"
                android:layout_height="389dp"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:background="@drawable/boton2"
                app:srcCompat="@drawable/profile1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="121dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/boton6"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/chat1" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/camara"
                    android:layout_width="109dp"
                    android:layout_height="78dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="180dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton3"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/camara" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/boton_done"
            android:text="@string/usernameProfile"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/boton3"
            android:text="@string/Age1"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/boton7"
            android:text="@string/career1"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/boton6"
            android:text="About me"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>

