<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F6FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="668dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/fondo_inte"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_interes"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/age"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="283dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/seekbar"
                android:backgroundTint="#89A3BC"
                android:progressDrawable="@drawable/fondo_inte"
                android:progressTint="#E3ECFD"
                android:secondaryProgressTint="#325F89"
                android:thumbTint="#EA42A1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="170dp"
                android:layout_height="10dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_interes"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/people_interest"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mujer" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ambos" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/hombre" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="172dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:background="@drawable/boton_done"
                android:text="@string/done"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

